Add standalone executor module with Arrow-based plan execution
Implement a complete query executor that interprets ProtoLogicalPlan
directly against in-memory Arrow batches, proving engine independence
from Spark. Covers all 20 plan nodes and ~90 expression variants:

- Core: Batch wrapper, Catalog, ExprEvaluator, PlanExecutor
- Operators: Project, Filter, Sort, Join (hash + nested loop),
  Aggregate, Window, SetOps, Pivot, Unpivot, Generate, LateralJoin
- Expressions: arithmetic, comparison, logical, string, date/time,
  math, cast, case/when, subquery (scalar, exists, in)
- Window functions: row_number, rank, dense_rank, ntile, lead, lag,
  first_value, last_value, nth_value, and window aggregates
- 19 end-to-end tests via QueryRunnerSuite

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>